--- a/examples/.project
+++ b/examples/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jmserver</name>
+	<name>gogame</name>
 	<comment></comment>
 	<projects>
 	</projects>
